--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/profile-pic-2.jpg"
+            src="./assets/BG pic_bg .png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -251,22 +251,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.jpeg"
+                src="./assets/AIpattrn.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">REAL ESTATE USING DATA MINING</h2>
+            <h2 class="experience-sub-title project-title">PIXEL PERFECT UI USING VITE</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/phani69015'"
+                onclick="location.href='https://github.com/phani69015/AIPatrn.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/phani69015'"
+                onclick="location.href='https://aipatrn.netlify.app/'"
               >
                 Live Demo
               </button>
@@ -284,13 +284,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/phani69015'"
+                onclick="location.href='https://github.com/phani69015/Road_accident_detection_DL'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/phani69015'"
+                onclick="location.href='https://github.com/phani69015/Road_accident_detection_DL'"
               >
                 Live Demo
               </button>
@@ -308,7 +308,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/phani69015'"
+                onclick="location.href='https://github.com/phani69015/MENTAL-HEALTH-INSIGHT-TRACKER.git'"
               >
                 Github
               </button>
